# red-blue-world

./: .gitignore  README.md  _setup.py  pyproject.toml
.github/workflows/: test.yml
red_blue_world/: Config.py  Env.py  Patch.py  Quilt.py  StorageManager.py  interfaces.py  patch_loader.py  utils.py
red_blue_world/patches/: gw.py  pickyeater.py
scripts/: run_tests.sh
tests/: test_Config.py  test_Quilt.py  test_StorageManager.py  test_pickyeater.py
