
[project]
name = "red-blue-world"
version = "0.0.0"
description = ""
authors = [
    {name = "Andy Patterson", email = "andnpatterson@gmail.com"},
]
dependencies = [
    "numpy>=1.24.3",
    "numba>=0.57.0",
    "simplejson",
    "types-simplejson"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.3.0",
    "matplotlib>=3.7.1",
]
